--- a/.env.dist
+++ b/.env.dist
@@ -26,3 +26,10 @@ DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN=^https?://localhost:?[0-9]*$
 ###< nelmio/cors-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+# Key paths should be relative to the project directory
+JWT_PRIVATE_KEY_PATH=config/jwt/private.pem
+JWT_PUBLIC_KEY_PATH=config/jwt/public.pem
+JWT_PASSPHRASE=6b24fdd3671cfb520df2bd04a88b0917
+###< lexik/jwt-authentication-bundle ###
