--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,8 @@
         "php": "^7.1.3",
         "ext-iconv": "*",
         "api-platform/api-pack": "^1.1",
+        "lexik/jwt-authentication-bundle": "^2.4",
+        "nelmio/cors-bundle": "*",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/console": "^4.0",
         "symfony/expression-language": "^4.0",
@@ -19,8 +21,7 @@
         "symfony/swiftmailer-bundle": "^3.1",
         "symfony/validator": "^4.0",
         "symfony/yaml": "^4.0",
-        "twig/extensions": "^1.5",
-        "nelmio/cors-bundle": "*"
+        "twig/extensions": "^1.5"
     },
     "require-dev": {
         "symfony/debug-pack": "*",
