--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,24 +1,49 @@
 security:
-    # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
+#    encoders:
+#        App\Entity\User: bcrypt
+
+#    role_hierarchy:
+#        ROLE_READER: ROLE_USER
+#        ROLE_ADMIN: ROLE_READER
+
     providers:
-        in_memory: { memory: ~ }
+      in_memory:
+         memory:
+           users:
+             ryan:
+               password: 123456
+               roles: 'ROLE_USER'
+    encoders:
+          Symfony\Component\Security\Core\User\User: plaintext
+
+
     firewalls:
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
-        main:
+        login:
+            pattern: ^/login
+            provider: in_memory
             anonymous: true
+            stateless: true
+            form_login:
+                check_path: /login
+                success_handler: lexik_jwt_authentication.handler.authentication_success
+                failure_handler: lexik_jwt_authentication.handler.authentication_failure
+                require_previous_session: false
+#
+        main:
+            pattern: ^/
+            provider: in_memory
+            stateless: true
+            anonymous: true
+            access_denied_handler: App\Security\AccessDeniedHandler
+            guard:
+                authenticators:
+                    - lexik_jwt_authentication.jwt_token_authenticator
 
-            # activate different ways to authenticate
+        dev:
+            pattern:  ^/(_(profiler|wdt)|css|images|js)/
+            security: false
 
-            # http_basic: true
-            # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
-
-            # form_login: true
-            # https://symfony.com/doc/current/security/form_login_setup.html
-
-    # Easy way to control access for large sections of your site
-    # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
-        # - { path: ^/profile, roles: ROLE_USER }
+        - { path: /api/users, role: ROLE_USER, method: 'GET' }
+        - { path: /api, role: ROLE_ADMIN }
+        - { path: ^/, role: IS_AUTHENTICATED_ANONYMOUSLY }
