--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,3 @@
 index:
-    path: /sandbox
-    controller: App\Controller\Test
+    path: /
+    controller: App\Controller\SecurityController::indexAction
